fixed results alignment

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -4,7 +4,7 @@
     .first-grid {
         width: @resultsFilterWidth;
         .flexSameSize();
-        padding: 0 42px 0 22px;
+        padding: 0 50px 0 22px;
     }
 }
 
